# Oil-and-Gas-projects

oil_and_gas_anomaly_detection/: Makefile  README.md  pyproject.toml
oil_and_gas_anomaly_detection/docs/: mkdocs.yml
oil_and_gas_anomaly_detection/docs/docs/: index.md
oil_and_gas_anomaly_detection/notebooks/: Practice.ipynb
oil_and_gas_anomaly_detection/oil_and_gas_anomaly_detection/: __init__.py  dataset.py  features.py  plots.py
oil_and_gas_anomaly_detection/oil_and_gas_anomaly_detection/modeling/: predict.py  train.py
